Fixed spacing on footer; restored titles to _pages

--- a/assets/css/default.sass
+++ b/assets/css/default.sass
@@ -223,7 +223,7 @@ main
 footer
   width: 100%
   max-width: $mw
-  margin: mm(2) auto 0 auto
+  margin: mm(3) auto 0 auto
   text-align: center
 
   h1
